# vlr-service

./: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ClientRequest.cpp  ClientRequest.h  Common.h  Config.cpp  Config.h  ConnectionPool.cpp  ConnectionPool.h  EricssonHLR.cpp  HLRConnector.cpp  HLRConnector.h  LogWriter.cpp  LogWriter.h  ReadMe.txt  ResponseParser.cpp  ResponseParser.h  Server.cpp  Server.h  vlr-service-example.conf  vlr-service.cpp  vlr-service.sln  vlr-service.vcxproj  vlr-service.vcxproj.filters
